# STM32G4_FW

./: .clangd  CMakeLists.txt  CMakePresets.json  arm-llvm.cmake
core/: test.cpp
source/core/: test.cpp  test.cppm
toolchain/: STM32G474VE.ld  llvmet.cmake
